<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>

    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>

    <string name="order_for">JustJava order for</string>

    <string name="add_whipped_cream">Add whipped cream</string>
    <string name="add_chocolate">Add chocolate</string>
    <string name="total_price">Total: $<xliff:g id="total" example="18">%d</xliff:g></string>
    <string name="thank_you">Thank you</string>

    <string name="max_order">You cannot order more than 100 coffees</string>
    <string name="min_order">You cannot order less than 1 coffee</string>
</resources>
